--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <form id="add-new-task-form">
+      <input id="task-name-input" placeholder="Task name" />
+      <button>Add task</button>
+    </form>
     <script defer src="./main.js"></script>
   </body>
 </html>
